--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+// color primary => #C882A7
+
+$primary-color: #C882A7;
+
+// variables
+.container {
+  padding: 5%;
+}
+
+.w-full {
+  width: 100%;
+}
