--- a/src/app/pages/products/product-register/product-register.component.html
+++ b/src/app/pages/products/product-register/product-register.component.html
@@ -1,47 +1,24 @@
 <app-navbar></app-navbar>
 
 <div class="container">
-  <h2>Cadastro de Produtos</h2>
+    <div class="card">
+        <h2 class="header">Cadastro de Produtos</h2>
 
-  <br>
+        <br>
 
-  <mat-grid-list cols="2" rowHeight="5rem" gutterSize="20px">
-    <mat-grid-tile colspan="1">
-      <mat-form-field class="w-full" appearance="outline" color="accent">
-        <mat-label>Nome do Produto</mat-label>
-        <input matInput>
-      </mat-form-field>
-    </mat-grid-tile>
+        <form [formGroup]="resourceForm">
+            <app-text-field [parentForm]="resourceForm" fieldName="name" type="text" name="name" label="Nome do Produto"></app-text-field>
 
-    <mat-grid-tile colspan="1">
-      <mat-form-field class="w-full" appearance="outline" color="accent">
-        <mat-label>Modelo</mat-label>
-        <input matInput>
-      </mat-form-field>
-    </mat-grid-tile>
+            <app-text-field [parentForm]="resourceForm" fieldName="model" type="text" name="model" label="Modelo"></app-text-field>
 
-    <mat-grid-tile colspan="1">
-      <mat-form-field class="w-full" appearance="outline" color="accent">
-        <mat-label>Preço</mat-label>
-        <input matInput>
-      </mat-form-field>
-    </mat-grid-tile>
+            <app-text-field [parentForm]="resourceForm" fieldName="price" type="text" name="price" label="Preço"></app-text-field>
 
-    <mat-grid-tile colspan="1">
-      <mat-form-field class="w-full" appearance="outline" color="accent">
-        <mat-icon color="accent" matSuffix>image</mat-icon>
-        <mat-label>Imagens</mat-label>
-        <input matInput>
-      </mat-form-field>
-    </mat-grid-tile>
+            <app-text-field [parentForm]="resourceForm" fieldName="picture" type="text" name="picture" label="Imagem" icon="assets/icons/camera.svg"></app-text-field>
 
-    <mat-grid-tile>
-      <button class="w-full" mat-button color="accent">Cancelar</button>
-    </mat-grid-tile>
-
-    <mat-grid-tile>
-      <button class="w-full" mat-raised-button color="accent">Salvar</button>
-    </mat-grid-tile>
-
-  </mat-grid-list>
+            <div class="flex end">
+                <button class="btn">Cancelar</button>
+                <button class="btn ml-1" (click)="submitForm()">Salvar</button>
+            </div>
+        </form>
+    </div>
 </div>
