--- a/src/app/pages/products/product-register/product-register.component.scss
+++ b/src/app/pages/products/product-register/product-register.component.scss
@@ -1,2 +1,21 @@
+.card {
+    margin: auto;
+    width: 20%;
+    padding: 2%;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    box-shadow: 0 0 1rem rgba(189, 189, 189, 0.7);
+}
+
+@media (max-width:576px) {
+  .card {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background: transparent;
+    box-shadow: none;
+    border: none;
+  }
+}
 
 
