--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 // color primary => #C882A7
@@ -14,10 +15,75 @@ body {
 $primary-color: #C882A7;
 
 // variables
-.container {
-  padding: 5%;
+@media(min-width: 992px) {
+    .container {
+        padding: 5%;
+    }
+}
+
+@media(max-width: 992px) {
+    .container {
+        padding: 5% 1.5% 5% 1.5%;
+    }
 }
 
 .w-full {
-  width: 100%;
+    width: 100%;
 }
+
+.btn-transparent {
+    border:  none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.ml-1 {
+    margin-left: 1rem;
+}
+
+.divider {
+    width:  100%;
+    border-top: 1px solid rgba(0, 0, 0, 0.08);
+    margin: 1rem 0 1rem 0;
+}
+
+.flex {
+    display: flex;
+}
+
+.end {
+    justify-content: end;
+}
+
+.btn {
+    display: block;
+    padding: .75rem 2rem;
+    outline: none;
+    border: none;
+    background-color: $primary-color;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bolder;
+    color: #fff;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: .3s;
+
+    &:hover {
+        box-shadow: 0 10px 16px rgba(160, 160, 160, 0.705);
+    }
+    &:focus {
+        background-color: pink;
+    }
+}
+
+.header {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+}
+
+
